--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,14 @@
 <div id="navbar">
-  navbar work
+  <div id="content">
+    <div id="leftNav">
+      <div id="logoTxt">
+        レードーメ
+      </div> 
+    </div>
+    <div id="rightNav">
+      <div id="homeBtn">Home</div>
+      <div id="upBtn">Sign up</div>
+      <div id="inBtn">Sign in</div>
+    </div>
+  </div>
 </div>
