--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 * {
+  @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100&family=Open+Sans:wght@300&family=Ubuntu:wght@300&display=swap');
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Kanit', sans-serif;
+  // font-family: 'Ubuntu', sans-serif;
+  //font-family: 'Open Sans', sans-serif;
 }
