--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,16 @@
   font-family: 'Kanit', sans-serif;
   // font-family: 'Ubuntu', sans-serif;
   //font-family: 'Open Sans', sans-serif;
+  ::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
+  ::-webkit-scrollbar-track {
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: #99D4D3;
+    border-radius: 10px;
+  }
 }
