--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -3,6 +3,6 @@
     <app-navbar></app-navbar>
   </div>
   <div id="bodyBox">
-    content here
+    <router-outlet></router-outlet>
   </div>
 </div>
