add home component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,25 @@
 <div id="home">
-  
+  <div id="homeImage">
+    <img class="image" src="https://i.ibb.co/Vw3y1f9/home-picture.png" alt="home-picture" />
+  </div>
+  <div id="title">
+    <div id="titleBox">
+      <div id="titleText">
+        <label for="">What is REDDOME ?</label>
+      </div>
+      <div id="content">
+        <label for="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quam eveniet architecto voluptate impedit repellendus iusto ratione voluptatum odio laboriosam?</label>
+      </div>
+    </div>
+    <div id="account">
+      <div id="buttonBox">
+        <div id="signUp">
+          <button class="signup-box">SIGN UP FREE</button>
+        </div>
+        <div id="signIn">
+          <button class="signin-box">SIGN IN</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
