add folder image

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div id="home">
   <div id="homeImage">
-    <img class="image" src="https://i.ibb.co/Vw3y1f9/home-picture.png" alt="home-picture" />
+    <img class="image" src="../../../assets/img/home_picture.png" alt="home-picture" />
   </div>
   <div id="title">
     <div id="titleBox">
