--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,10 +5,21 @@
         レードーメ
       </div> 
     </div>
-    <div id="rightNav">
-      <div id="homeBtn">Home</div>
-      <div id="upBtn">Sign up</div>
-      <div id="inBtn">Sign in</div>
+    <div >
+    <div class="rightNav" *ngIf="isLoggedIn; else loggedOut">
+      <div class="homeBtn">Home</div>
+      <div class="upBtn">Sign up</div>
+      <div class="inBtn">Sign in</div>
     </div>
+  </div>
+    <ng-template #loggedOut>
+    <div class="rightNav" >
+      <div class="createBtn">+</div>
+      <div class="userDetail">
+        <div class="profilePic"></div>
+        <div class="userName">Udomsak</div>
+      </div>
+    </div>
+    </ng-template>
   </div>
 </div>
