--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,17 +1,16 @@
 <div id="navbar">
   <div id="content">
     <div id="leftNav">
+      <img id="logoUdome" src="../../../assets/img/logo_s.png" alt="">
       <div id="logoTxt">
         レードーメ
       </div> 
     </div>
-    <div >
     <div class="rightNav" *ngIf="isLoggedIn; else loggedOut">
       <div class="homeBtn">Home</div>
       <div class="upBtn">Sign up</div>
       <div class="inBtn">Sign in</div>
     </div>
-  </div>
     <ng-template #loggedOut>
     <div class="rightNav" >
       <div class="createBtn">+</div>
