--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -18,7 +18,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 40px;
     #titleBox {
       display: flex;
       flex-direction: column;
@@ -82,8 +81,13 @@
   }
 }
 
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 1496px) and (max-height: 716px) {
   #home {
+    #homeImage {
+      $navHeight: 50px;
+      width: 60%;
+      height: calc(100vh - (#{$navHeight}));
+    }
     #title {
       width: 80%;
       #titleBox {
@@ -120,6 +124,7 @@
   #home {
     #title {
       width: 70%;
+      height: calc(100vh - 50px);
       #titleBox {
         #titleText {
           font-size: 48px;
@@ -160,14 +165,13 @@
       justify-content: center;
       align-items: center;
       width: 100%;
-      height: 100vh;
+      height: calc(100vh - 50px);
       #titleBox {
         display: flex;
         align-items: center;
         width: 100%;
         #titleText {
           font-size: 48px;
-          // width: 70%;
         }
         #content {
           display: flex;
@@ -212,7 +216,7 @@
       justify-content: center;
       align-items: center;
       width: 100%;
-      height: 100vh;
+      height: calc(100vh - 50px);
       #titleBox {
         display: flex;
         align-items: center;
