--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,44 +1,45 @@
 #home {
   $navHeight: 50px;
   width: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 50% 50%;
   background-color: #99D4D3;
   #homeImage {
     height: calc(100vh - (#{$navHeight}));
     display: flex;
     align-items: flex-end;
     .image {
-      width: 80%;
+      width: 70%;
     }
   }
   #title {
-    width: 60%;
     display: flex;
-    flex-direction: column;
+    flex-flow: column wrap;
+    align-items: center;
     justify-content: center;
     #titleBox {
-      display: flex;
-      flex-direction: column;
-      width: 80%;
       #titleText {
-        font-size: 72px;
-        color: #1B4E8C;
+        .text-title {
+          font-size: 72px;
+          line-height: normal;
+          color: #1B4E8C;
+        }
       }
       #content {
         margin-top: 10px;
-        display: flex;
-        font-size: 24px;
-        color: #fff;
+        width: 80%;
+        .text-content {
+          font-size: 24px;
+          line-height: normal;
+          color: #fff;
+        }
       }
     }
     #account { 
-      width: 70%;
+      width: 100%;
       padding: 20px 0 20px 0;
       #buttonBox {
         display: flex;
-        justify-content: center;
         #signUp {
           margin-right: 30px;
           .signup-box {
@@ -81,21 +82,29 @@
   }
 }
 
-@media screen and (max-width: 1496px) and (max-height: 716px) {
+@media screen and (max-width: 1376px) {
   #home {
     #homeImage {
+      width: 100%;
+    }
+    #title {
       $navHeight: 50px;
-      width: 60%;
       height: calc(100vh - (#{$navHeight}));
-    }
-    #title {
-      width: 80%;
       #titleBox {
         #titleText {
-          font-size: 60px;
+          .text-title {
+            font-size: 55px;
+            line-height: normal;
+            color: #1B4E8C;
+          }
         }
         #content {
-          font-size: 22px;
+          width: 80%;
+          .text-content {
+            font-size: 22px;
+            line-height: normal;
+            color: #fff;
+          }
         }
       }
       #account {
@@ -104,14 +113,12 @@
             .signup-box {
               width: 180px;
               height: 50px;
-              font-size: 18px;
             }
           }
           #signIn {
             .signin-box {
               width: 180px;
               height: 50px;
-              font-size: 18px;
             }
           }
         }
@@ -120,17 +127,30 @@
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1024px) {
   #home {
+    #homeImage {
+      .image {
+        width: 80%;
+      }
+    }
     #title {
-      width: 70%;
-      height: calc(100vh - 50px);
+      width: calc(100% - 50px);
       #titleBox {
         #titleText {
-          font-size: 48px;
+          .text-title {
+            font-size: 45px;
+            line-height: normal;
+            color: #1B4E8C;
+          }
         }
         #content {
-          font-size: 20px;
+          width: 80%;
+          .text-content {
+            font-size: 20px;
+            line-height: normal;
+            color: #fff;
+          }
         }
       }
       #account {
@@ -138,15 +158,15 @@
           #signUp {
             .signup-box {
               width: 150px;
-              height: 50px;
-              font-size: 18px;
+              height: 40px;
+              font-size: 16px;
             }
           }
           #signIn {
             .signin-box {
               width: 150px;
-              height: 50px;
-              font-size: 18px;
+              height: 40px;
+              font-size: 16px;
             }
           }
         }
@@ -155,49 +175,50 @@
   }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 768px) {
   #home {
+    display: flex;
+    justify-content: center;
     #homeImage {
       display: none;
     }
     #title {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: calc(100vh - 50px);
       #titleBox {
         display: flex;
+        flex-direction: column;
         align-items: center;
-        width: 100%;
         #titleText {
-          font-size: 48px;
+          .text-title {
+            font-size: 45px;
+            line-height: normal;
+            color: #1B4E8C;
+          }
         }
         #content {
-          display: flex;
-          justify-content: center;
-          font-size: 24px;
-          align-items: center;
           width: 70%;
           .text-content {
-            display: flex ;
+            font-size: 20px;
+            line-height: normal;
+            color: #fff;
           }
         }
       }
       #account {
+        display: flex;
+        justify-content: center;
         #buttonBox {
           #signUp {
             .signup-box {
               width: 150px;
-              height: 50px;
-              font-size: 14px;
+              height: 40px;
+              font-size: 16px;
             }
           }
           #signIn {
             .signin-box {
               width: 150px;
-              height: 50px;
-              font-size: 14px;
+              height: 40px;
+              font-size: 16px;
             }
           }
         }
@@ -206,49 +227,55 @@
   }
 }
 
-@media screen and (max-width: 530px) {
+@media screen and (max-width: 500px) {
   #home {
+    display: flex;
+    justify-content: center;
     #homeImage {
       display: none;
     }
     #title {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: calc(100vh - 50px);
       #titleBox {
         display: flex;
+        flex-direction: column;
         align-items: center;
         #titleText {
-          font-size: 36px;
+          .text-title {
+            font-size: 32px;
+            line-height: normal;
+            color: #1B4E8C;
+          }
         }
         #content {
-          font-size: 20px;
+          width: 70%;
           .text-content {
-            display: flex ;
+            font-size: 18px;
+            line-height: normal;
+            color: #fff;
           }
         }
       }
       #account {
+        display: flex;
+        justify-content: center;
         #buttonBox {
           flex-direction: column;
           #signUp {
-            width: 100%;
+            display: flex;
+            margin: 0;
             .signup-box {
-              width: 80%;
-              height: 40px;
-              font-size: 14px;
               margin: 0 30px 0 30px;
+              width: 300px;
+              height: 40px;
+              font-size: 16px;
             }
           }
           #signIn {
-            width: 100%;
             .signin-box {
-              width: 80%;
+              margin: 10px 30px 0 30px;
+              width: 300px;
               height: 40px;
-              font-size: 14px;
-              margin: 20px 30px 0 30px;
+              font-size: 16px;
             }
           }
         }
