--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
   <div id="title">
     <div id="titleBox">
       <div id="titleText">
-        <label for="">What is REDDOME ?</label>
+        <label class="text-title" for="">What is REDDOME ?</label>
       </div>
       <div id="content">
         <label class="text-content" for="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quam eveniet architecto voluptate impedit repellendus iusto ratione voluptatum odio laboriosam?</label>
