filterbar + menu post

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
         <label for="">What is REDDOME ?</label>
       </div>
       <div id="content">
-        <label class="text-content" for="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quam eveniet architecto voluptate impedit repellendus iusto ratione voluptatum odio laboriosam?</label>
+        <label for="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quam eveniet architecto voluptate impedit repellendus iusto ratione voluptatum odio laboriosam?</label>
       </div>
     </div>
     <div id="account">
@@ -16,11 +16,10 @@
         <div id="signUp">
           <button class="signup-box">SIGN UP FREE</button>
         </div>
-        <div id="signIn" (click)="onClickSignIn()">
+        <div id="signIn">
           <button class="signin-box">SIGN IN</button>
         </div>
       </div>
     </div>
-    <app-signin *ngIf="isSignIn"></app-signin>
   </div>
 </div>
