--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -1,11 +1,30 @@
 <div id="feedContent">
-    <div id="filterContent">
-        <div id="txtFilter">
-            Filter posts
-        </div>
-        <div id="filterTab">
-            <div id="lastedButton"> <i class="fas fa-fire-alt logoFire"></i>Popular</div>
-            <div id="popularButton"><i class="far fa-sun logoNew"></i>New</div>
-        </div>
+  <div id="filterContent">
+    <div id="txtFilter">
+      Filter posts
     </div>
+    
+    <div id="filterTab">
+      <div id="filterLeft">
+        <div id="popularButton"> <i class="fas fa-fire-alt logoFire"></i>Popular</div>
+        <div id="lastestButton"><i class="far fa-sun logoNew"></i>Newest</div>
+      </div>
+      <div id="filterRight">
+        <div mat-icon-button [matMenuTriggerFor]="menu" class="menuPlus">
+          <i class="fas fa-ellipsis-h"></i>
+        </div>
+        <mat-menu #menu="matMenu" xPosition="before">
+          <button mat-menu-item>
+            <mat-icon>create</mat-icon>
+            <span>Create post</span>
+          </button>
+          <button mat-menu-item>
+            <mat-icon>add_circle_outline</mat-icon>
+            <span>Create Group</span>
+          </button>
+        </mat-menu>
+      </div>
+    </div>
+    
+  </div>
 </div>
