--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,7 +13,7 @@
     </div>
     <div id="account">
       <div id="buttonBox">
-        <div id="signUp">
+        <div id="signUp" (click)="onClickSignUp()">
           <button class="signup-box">SIGN UP FREE</button>
         </div>
         <div id="signIn" (click)="onClickSignIn()">
@@ -25,4 +25,7 @@
 </div>
 <div *ngIf="isOpenSignIn">
   <app-signin (changeIsOpen)="closeModalandChangeIsOpenSignIn($event)"></app-signin>
+</div>
+<div *ngIf="isOpenSignUp">
+  <app-signup (changeIsOpen)="closeModalandChangeIsOpenSignIn($event)"></app-signup>
 </div>
