--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -1,6 +1,6 @@
 #layout {
   $navHeight: 50px;
-  background-color: #DAE0E6;
+  background-color: #F5F5F5;
   max-height: 100vh;
   overflow-y: overlay;
   #navBox {
