--- a/src/app/components/postfeed/postfeed.component.html
+++ b/src/app/components/postfeed/postfeed.component.html
@@ -1,1 +1,27 @@
-<p>postfeed works!</p>
+<div id="postfeed">
+    <div id="postLike">
+        <div id="logoVote">
+            <i class="fas fa-arrow-up"></i>
+        </div>
+    </div>
+    <div id="postfeedContent">
+        <div id="header">
+            <div id="headerLeft">
+                <div id="profileGroup">
+                    <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
+                </div>
+                <div id="nameGroup">DoggyLover</div>
+            </div>
+            <div id="headerRight">
+                <div id="joinButton">
+                    <button mat-flat-button color="primary" class="joinButtonMat"> Join </button>
+                </div>
+            </div>
+        </div>
+        <div id="body">
+            <div id="message">
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </div>
+        </div>
+    </div>
+</div>
