--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -1,18 +1,18 @@
 <div id="feedContent">
+  <div id="content">
   <div id="filterContent">
     <div id="txtFilter">
       Filter posts
-    </div>
-    
+    </div>   
     <div id="filterTab">
       <div id="filterLeft">
         <div id="popularButton"> <i class="fas fa-fire-alt logoFire"></i>Popular</div>
         <div id="lastestButton"><i class="far fa-sun logoNew"></i>Newest</div>
       </div>
       <div id="filterRight">
-        <div mat-icon-button [matMenuTriggerFor]="menu" class="menuPlus">
+        <button mat-icon-button [matMenuTriggerFor]="menu" class="menuPlus">
           <i class="fas fa-ellipsis-h"></i>
-        </div>
+        </button>
         <mat-menu #menu="matMenu" xPosition="before">
           <button mat-menu-item>
             <mat-icon>create</mat-icon>
@@ -25,6 +25,9 @@
         </mat-menu>
       </div>
     </div>
-    
+  </div>
+  <div id="post">
+    <app-postfeed></app-postfeed>
+  </div>
   </div>
 </div>
