--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -1,71 +1,79 @@
 $colorTxt: rgb(51, 51, 51);
 #feedContent {
     display: grid;
+    padding: 30px;
     grid-template-columns: 1fr 3fr 1fr;
-    #filterContent {
+    #content {
         grid-column-start: 2;
-        width: 60%;
-        margin: 10px 0px;
-        #txtFilter {
-            color: $colorTxt;
-            font-size: 15px;
-            font-weight: bold;
-        }
-        #filterTab {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin-top: 5px;
-            height: 60px;
-            background-color: rgb(255, 255, 255);
-            padding: 0px 20px;
-            border-radius: 5px;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            #filterLeft {
+        #filterContent {
+            width: 60%;
+            margin: 10px 0px;
+            #txtFilter {
+                color: $colorTxt;
+                font-size: 15px;
+                font-weight: bold;
+            }
+            #filterTab {
                 display: flex;
-                #lastestButton {
+                align-items: center;
+                justify-content: space-between;
+                margin-top: 5px;
+                height: 60px;
+                background-color: rgb(255, 255, 255);
+                padding: 0px 20px;
+                border-radius: 5px;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                #filterLeft {
                     display: flex;
-                    align-items: center;
-                    border-radius: 20px;
-                    color: #1B4E8C;
-                    background-color: #99d4d36b;
-                    margin-right: 40px;
-                    height: 60%;
-                    padding: 0px 10px;
-                    .logoFire {
-                        margin-right: 5px
-                    }
-                    &:hover {
+                    #lastestButton {
+                        display: flex;
+                        align-items: center;
+                        border-radius: 20px;
+                        color: #1B4E8C;
                         background-color: #99d4d36b;
-                        cursor: pointer;
+                        margin-right: 40px;
+                        height: 60%;
+                        padding: 0px 10px;
+                        transition: 0.3s;
+                        .logoFire {
+                            margin-right: 5px
+                        }
+                        &:hover {
+                            background-color: #99d4d36b;
+                            cursor: pointer;
+                        }
+                    }
+                    #popularButton {
+                        display: flex;
+                        align-items: center;
+                        border-radius: 20px;
+                        color: #1B4E8C;
+                        margin-right: 40px;
+                        height: 60%;
+                        padding: 0px 10px;
+                        transition: 0.3s;
+                        .logoNew {
+                            margin-right: 5px
+                        }
+                        &:hover {
+                            background-color: #99d4d36b;
+                            cursor: pointer;
+                        }
                     }
                 }
-                #popularButton {
-                    display: flex;
-                    align-items: center;
-                    border-radius: 20px;
-                    color: #1B4E8C;
-                    margin-right: 40px;
-                    height: 60%;
-                    padding: 0px 10px;
-                    .logoNew {
-                        margin-right: 5px
-                    }
+            #filterRight {
+                .menuPlus {
+                    font-size: 20px;
+                    color: rgb(54, 54, 54);
                     &:hover {
-                        background-color: #99d4d36b;
                         cursor: pointer;
                     }
                 }
             }
-        #filterRight {
-            .menuPlus {
-                font-size: 20px;
-                color: rgb(54, 54, 54);
-                &:hover {
-                    cursor: pointer;
-                }
             }
         }
+        #post {
+            width: 60%;
         }
     }
 }
