fix layout + css feed post

--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -2,7 +2,7 @@
   position: relative;
   $navHeight: 50px;
   background-color: #F5F5F5;
-  max-height: 100vh;
+  height: 100vh;
   overflow-y: overlay;
   #navBox {
     height: $navHeight;
