--- a/src/app/components/postfeed/postfeed.component.html
+++ b/src/app/components/postfeed/postfeed.component.html
@@ -1,7 +1,11 @@
 <div id="postfeed">
+<div id="allContent">
     <div id="postLike">
         <div id="logoVote">
             <i class="fas fa-arrow-up"></i>
+        </div>
+        <div id="countVote">
+            2.4k
         </div>
     </div>
     <div id="postfeedContent">
@@ -11,17 +15,47 @@
                     <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
                 </div>
                 <div id="nameGroup">DoggyLover</div>
+                <div id="postby">
+                    <div id="postbyTxt">• post by </div>
+                    <div id="postbyUser">GoldenRe</div>
+                </div>
             </div>
             <div id="headerRight">
                 <div id="joinButton">
-                    <button mat-flat-button color="primary" class="joinButtonMat"> Join </button>
+                    <button mat-icon-button [matMenuTriggerFor]="menu" class="editPost">
+                        <i class="fas fa-ellipsis-h"></i>
+                    </button>
+                    <mat-menu #menu="matMenu" xPosition="after">
+                    <button mat-menu-item>
+                        <mat-icon>create</mat-icon>
+                        <span>Edit post</span>
+                    </button>
+                    <button mat-menu-item>
+                        <mat-icon>delete_outline</mat-icon>
+                        <span>Delete post</span>
+                    </button>
+                    </mat-menu>
                 </div>
             </div>
         </div>
         <div id="body">
             <div id="message">
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                วันนี้โป้อยากกินไก่ย่างห้าดาว
+            </div>
+        </div>
+        <div id="footer">
+            <div id="featurePost">
+                <div id="commentButton">
+                    <div id="commentLogo">
+                        <i class="far fa-comment-alt"></i>
+                    </div>
+                    <div id="commentText">
+                        Comment
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+</div>
+<div id="dummyOpen"></div>
 </div>
