--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  // font-family: 'Prompt', sans-serif;
   font-family: 'Kanit', sans-serif;
   // font-family: 'Ubuntu', sans-serif;
   //font-family: 'Open Sans', sans-serif;
