--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -1,21 +1,22 @@
 #bgMain {
-    background-color: rgba(0, 0, 0, 0.63);
-    height: calc(100vh - 50px);
+    background-color: #99d4d36b;
+    // height: calc(100vh - 50px);
     display: flex;
     justify-content: center;
     align-items: center;
     overflow-y: auto;
-    height: 100%;
+    // height: 100%;
+    min-height: 100%;
     #bgBox {
-        background-color: rgb(175, 174, 174);
+        background-color: #99d4d36b;
         max-width: 1200px;
         width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
+        height: 100%;
         // height: calc(100% - 50px);
         // height: calc(100% - bgMain);
-        height: 100%;
         #topBar {
             max-width: 1200px;
             background-color: black;
@@ -38,7 +39,7 @@
             max-width: 800px;
             width: 100%;
             margin: 90px 0 50px 0;
-            height: calc(100% - bgMain);
+            // height: calc(100% - bgMain);
             // margin: 50px 50px;
             // height: calc(100% - 130px);
         }
