change bgcolor post

--- a/src/app/components/postfeed/postfeed.component.scss
+++ b/src/app/components/postfeed/postfeed.component.scss
@@ -1,5 +1,7 @@
 #postfeed {
     position: relative;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
     #allContent {
         position: relative;
         margin-top: 10px;
