--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
         <label class="text-title" for="">What is REDDOME ?</label>
       </div>
       <div id="content">
-        <label for="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quam eveniet architecto voluptate impedit repellendus iusto ratione voluptatum odio laboriosam?</label>
+        <label class="text-content" for="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quam eveniet architecto voluptate impedit repellendus iusto ratione voluptatum odio laboriosam?</label>
       </div>
     </div>
     <div id="account">
@@ -16,7 +16,7 @@
         <div id="signUp" (click)="onClickSignUp()">
           <button class="signup-box">SIGN UP FREE</button>
         </div>
-        <div id="signIn">
+        <div id="signIn" (click)="onClickSignIn()">
           <button class="signin-box">SIGN IN</button>
         </div>
       </div>
