add cookie and map user in navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
       <div class="createBtn">+</div>
       <div class="userDetail">
         <div class="profilePic"></div>
-        <div class="userName">Udomsak</div>
+        <div class="userName">{{this.getUserDetails().username}}</div>
       </div>
     </div>
     </ng-template>
