--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -5,6 +5,7 @@
   height: 100vh;
   overflow-y: overlay;
   #navBox {
+    z-index: 10;
     height: $navHeight;
     position: sticky;
     top :0;
