--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -3,11 +3,104 @@
         <div id="topBar">
             <div id="button">X Close</div>
         </div>
-        <div id="bgPost">asdasjfladfj
-            <div>asdsadasd</div>
-            <div>asdsadasd</div>
-            <div>asdsadasd</div>
-            <div>asdsadasd</div>
+        <div id="bgPost">
+            <app-postfeed></app-postfeed>
+            <div id="comment">
+                <div id="inputComment">
+                    <mat-form-field class="example-full-width" style="width: 100%;" appearance="fill">
+                        <mat-label>Comment</mat-label>
+                        <textarea matInput placeholder="What are you comment ?"></textarea>
+                      </mat-form-field>
+                </div>
+                <div class="comment-user">
+                    <div class="content-comment">
+                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
+                        <label id="userName">FlukeNtk</label>
+                        <label id="postTime">3h</label>
+                    </div>
+                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
+                </div>
+                <div class="comment-user">
+                    <div class="content-comment">
+                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
+                        <label id="userName">FlukeNtk</label>
+                        <label id="postTime">3h</label>
+                    </div>
+                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
+                </div>
+                <div class="comment-user">
+                    <div class="content-comment">
+                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
+                        <label id="userName">FlukeNtk</label>
+                        <label id="postTime">3h</label>
+                    </div>
+                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
+                </div>
+                <div class="comment-user">
+                    <div class="content-comment">
+                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
+                        <label id="userName">FlukeNtk</label>
+                        <label id="postTime">3h</label>
+                    </div>
+                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
+                </div>
+                <div class="comment-user">
+                    <div class="content-comment">
+                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
+                        <label id="userName">FlukeNtk</label>
+                        <label id="postTime">3h</label>
+                    </div>
+                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
+                </div>
+                <div class="comment-user">
+                    <div class="content-comment">
+                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
+                        <label id="userName">FlukeNtk</label>
+                        <label id="postTime">3h</label>
+                    </div>
+                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
+                </div>
+                <div class="comment-user">
+                    <div class="content-comment">
+                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
+                        <label id="userName">FlukeNtk</label>
+                        <label id="postTime">3h</label>
+                    </div>
+                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
+                </div>
+                <div class="comment-user">
+                    <div class="content-comment">
+                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
+                        <label id="userName">FlukeNtk</label>
+                        <label id="postTime">3h</label>
+                    </div>
+                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
+                </div>
+                <div class="comment-user">
+                    <div class="content-comment">
+                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
+                        <label id="userName">FlukeNtk</label>
+                        <label id="postTime">3h</label>
+                    </div>
+                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
+                </div>
+                <div class="comment-user">
+                    <div class="content-comment">
+                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
+                        <label id="userName">FlukeNtk</label>
+                        <label id="postTime">3h</label>
+                    </div>
+                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
+                </div>
+                <div class="comment-user">
+                    <div class="content-comment">
+                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
+                        <label id="userName">FlukeNtk</label>
+                        <label id="postTime">3h</label>
+                    </div>
+                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
