--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -10,6 +10,6 @@
     top :0;
   }
   #bodyBox {
-    max-height: calc(100vh - (#{$navHeight}));
+    height: calc(100vh - (#{$navHeight}));
   }
 }
