--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -159,3 +159,12 @@ $colorTxt: rgb(51, 51, 51);
         }
     }
 }
+.loading {
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 50px);
+    z-index: 9999;
+}
